--- a/Local Note/LocalNote/MainPage.xaml
+++ b/Local Note/LocalNote/MainPage.xaml
@@ -32,7 +32,7 @@
             <CommandBar.Content>
                 <TextBlock  x:Name="commandBarLable" Text="{x:Bind NoteViewModel.SelectedNoteTitles, Mode=TwoWay}" Margin="10" x:FieldModifier="public"></TextBlock>
             </CommandBar.Content>
-            <AppBarButton ToolTipService.ToolTip="Add a note" Icon="Add" Click="AddAppBarButton_Click" Label="Add" Command="{x:Bind NoteViewModel.AddCommand}"></AppBarButton>
+            <AppBarButton ToolTipService.ToolTip="Add a note" x:Name="AddButton" IsEnabled="False" Icon="Add" Click="AddAppBarButton_Click" Label="Add"></AppBarButton>
             <AppBarButton ToolTipService.ToolTip="Save a note" x:Name="SaveButton" Click="SaveButton_Click" Icon="Save" Label="Save" Command="{x:Bind NoteViewModel.saveCommand}"></AppBarButton>
             <AppBarButton ToolTipService.ToolTip="Edit a note" x:Name="EditButton" Icon="Edit" Label="Edit" Click="EditAppBarButton_Click" IsEnabled="False"></AppBarButton>
             <AppBarSeparator></AppBarSeparator>
@@ -55,10 +55,20 @@
         </Grid.RowDefinitions>
 
         <ScrollViewer Grid.Row="2" Grid.Column="0" Margin="5,5,5,5" Grid.RowSpan="2" ToolTipService.ToolTip="Scroll this viewer">
-            <ListView x:Name="MylistView" ItemsSource="{Binding Source={StaticResource NotesCollection}}"
+            <!--<ListView x:Name="MylistView" ItemsSource="{Binding Source={StaticResource NotesCollection}}"
                       ItemTemplate="{StaticResource NotesTemplate}"
                       SelectedItem="{x:Bind NoteViewModel.SelectedTitle, Mode=TwoWay}" 
                       SelectionMode="Single" ItemClick="listViewItem_ItemClick" IsItemClickEnabled="True">
+            </ListView>-->
+            <ListView x:Name="MylistView" SelectedItem="{x:Bind NoteViewModel.SelectedTitle, Mode=TwoWay}" 
+                      SelectionMode="Single" ItemClick="listViewItem_ItemClick" IsItemClickEnabled="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="6">
+                            <TextBlock Text="{Binding}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </ScrollViewer>
         <!--https://stackoverflow.com/questions/46773662/set-focus-to-usercontrol-c-uwp-->
